# gemini-live-native

./: .env  pyproject.toml  repomix-output.xml  requirements.txt
app/: audio_io_handler.py  gemini_service.py  main.py
core/: audio_streamer.py
static/: index.html
